blog/styles/globals.css
:root {
  --color-text: #121417;
  --color-gray: #99a4ad;
  --color-green: #22d35d;
  --color-red: #c11f1f;
  --blue-0: #010227;
  --blue-1: #02033b;
  --blue-2: #03045e;
  --blue-3: #023e8a;
  --blue-4: #0077b6;
  --blue-5: #0096c7;
  --blue-6: #00b4d8;
  --blue-7: #48cae4;
  --blue-8: #90e0ef;
  --blue-9: #ade8f4;
  --blue-10: #caf0f8;
}

html,
body {
  background-color: var(--blue-8);
  padding: 0;
  margin: 3rem 0 0 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}

main {
  padding: 1rem 10vw;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

/*Navbar*/

.navbar {
  height: 70px;
  width: 100%;
  background: var(--blue-10);
  color: var(--color-text);
  position: fixed;
  top: 0;
  padding: 0 10vw;
  font-weight: bold;
  border-bottom: 1px solid var(--color-gray);
  z-index: 99;
}

.navbar ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 100%;
}

.navbar img {
  border-radius: 50%;
  width: 50px;
  height: 50px;
  cursor: pointer;
}

.navbar li {
  border-radius: 50%; 
}

/*Buttons*/
.btn, button {
  background-color: var(--color-gray);
  border: none;
  color: var(--color-text);
  padding: 1rem 2rem;
  display: flex;
  align-items: center;
  text-align: center;
  justify-content: center;
  text-decoration: none;
  font-family: 'Noto Sans', sans-serif;
  font-weight: bold;
  border-radius: 0.25rem;
  cursor: pointer;
  margin: 0.5rem 1rem 0.5rem 0;
}

@media only screen and (max-width: 768px) {
  button {
    padding: 0.5rem 1rem;
    font-size: 0.8rem;
  }
}


button:hover {
  filter: brightness(90%);
}

button:disabled,
button[disabled]{
  filter: brightness(80%);
  cursor: not-allowed;
}

button.btn-standard {
  background-color: var(--blue-2);
  color: white;
}

button.btn-red {
  background-color: var(--color-red);
  color: white;
}

button.btn-green {
  background-color: var(--color-green);
  color: white;
}

button.btn-google {
  background-color: white;
  color: var(--color-text);
}

.btn-google img {
  width: 30px;
  margin-right: 10px;
}

button.btn-logo {
  background-color: var(--color-text);
  color: white;
  text-transform: uppercase;
  font-size: 1.5rem;
  padding: 0.5rem 1rem;
}


/*Loader + spin animation*/

.loader {
  width: 3rem;
  height: 3rem;
  border-radius: 50%;
  border: 0.6rem solid var(--blue-10);
  border-top: 0.6rem solid var(--blue-2);
  animation: spin 1s ease infinite;
}

@keyframes spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

